//
// Created by Pierre Roussel on 6/16/23.
//

#ifndef LO21_PROJECT_CARDSLOTTYPE_H
#define LO21_PROJECT_CARDSLOTTYPE_H

enum class CardSlotType {
  DECK,
  HAND,
  COMBO,
  BORDER
};

#endif//LO21_PROJECT_CARDSLOTTYPE_H
