//
// Created by Pierre Roussel on 5/9/23.
//

#ifndef LO21_PROJECT_WIDGETSOPTIONS_H
#define LO21_PROJECT_WIDGETSOPTIONS_H

namespace View::Constants {

/**
 * @brief WidgetsOptions enum class
 * @details This enum class is used to identify the different widgets of the application.
 * It also allows the user to switch between widgets in the StackWidget.
 */
enum class WidgetsOptions {
  HOME,
  GAME_OPTIONS,
  PLAYER,
  GAME,
};
}// namespace View::Constants

#endif//LO21_PROJECT_WIDGETSOPTIONS_H
